fixed overflow scrolling in nested divs

--- a/styles.css
+++ b/styles.css
@@ -400,18 +400,18 @@
     aspect-ratio: 906/912;
     align-items: center;
     position: relative;
-    padding-top: 10cqb;
-    padding-bottom: 10cqb;
     box-sizing: border-box;
 }
 
 .dev-window-mask {
-    height: 100%;
+    height: 87%;
     width: 100%;
     background-color: white;  
     box-sizing: border-box;
     padding: 5%;
     overflow-y: scroll; 
+    position: absolute;
+    bottom: 5%;
 }
 
 .project-demo {
@@ -487,6 +487,9 @@
     }
     .project-dev-stages {
         padding-top: 0%;
+    }
+    .project-dev-window{
+        height: 70vh
     }
     .button-folder {
         flex: 1;
